[#28][Dennis&jj] Fix wrap of login and signup buttons in mobile view

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,7 +8,8 @@
   justify-content: space-between;
 }
 
-.button-wrapper {
+.button-wrapper-logged-in,
+.button-wrapper-not-logged-in {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -100,8 +101,13 @@
 }
 
 @media only screen and (max-width: 414px) {
-  .button-wrapper {
+  .button-wrapper-logged-in,
+  .button-wrapper-not-logged-in {
     width: 100%;
+  }
+
+  .button-wrapper-not-logged-in {
+    flex-wrap: nowrap;
   }
   .my-events-link {
     order: 1;
